<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon_selector"
        android:title="" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/compass_icon_selector"
        android:title="" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/scan_icon_selector"
        android:title="" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/leaderboard_icon_selector"
        android:title="" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon_selector"
        android:title="" />

</menu>