<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.ScanFragment">

    <ImageView
        android:id="@+id/scan_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/title_scan"
        android:src="@drawable/scan_transparent_icon"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="150dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>